# lib_python

./: .gitignore  CHANGELOG.md  README.md  color_detector.py  control_pos.py  flake.nix  ilo.py  ligne_detector.py  pyproject.toml  test.py
.github/workflows/: pypi_publish.yaml
base_folderv.0.0.20/: setup.py
base_folderv.0.0.20/libname/: ilo.py
base_folderv.0.0.24/: setup.py
base_folderv.0.0.24/libname/: __init__.py  ilo.py
base_folderv.0.0.25/: setup.py
base_folderv.0.0.25/libname/: ilo.py
base_folderv.0.0.26/: setup.py
base_folderv.0.0.26/libname/: __init__.py  ilo.py
base_folderv.0.0.28/: setup.py
base_folderv.0.0.28/libname/: __init__.py  ilo.py
base_folderv.0.0.29/: setup.py
base_folderv.0.0.29/libname/: __init__.py  ilo.py
base_folderv.0.0.30/: setup.py
base_folderv.0.0.30/libname/: Test_notebook.ipynb  ilo.py  test.py
base_folderv.0.0.31/: setup.py
base_folderv.0.0.31/libname/: __init__.py  ilo.py
base_folderv.0.0.33/: README.md  setup.py
base_folderv.0.0.33/libname/: ilo.py
base_folderv.0.0.34/: README.md  setup.py
base_folderv.0.0.34/libname/: Labyrinth.py  __init__.py  ilo.py  test.py
base_folderv.0.0.35/: setup.py
base_folderv.0.0.35/libname/: ilo.py
base_folderv.0.0.36/: README.md  setup.py
base_folderv.0.0.36/libname/: ilo.py
base_folderv.0.0.38/: setup.py
base_folderv.0.0.38/libname/: __init__.py  ilo.py
base_folderv.0.0.41/: setup.py
base_folderv.0.0.41/libname/: ilo.py
base_folderv.0.0.42/: setup.py
base_folderv.0.0.42/libname/: Labyrinth.py  ilo.py  line_following.py  test.py
base_folderv.0.0.43/: setup.py
base_folderv.0.0.43/libname/: ilo.py
base_folderv.0.0.43/libname/ilo.egg-info/: PKG-INFO
base_folderv.0.0.44/: setup.py
base_folderv.0.0.44/libname/: Labyrinth.py  ilo.py  potard_control.py
base_folderv.0.0.46/: setup.py
base_folderv.0.0.46/libname/: __init__.py  ilo.py
base_folderv.0.0.47/: setup.py
base_folderv.0.0.47/libname/: ilo.py  tester.py
base_folderv.0.0.48/: setup.py
base_folderv.0.0.48/libname/: __init__.py  ilo.py  pen_holder.py
base_folderv.0.0.48/libname/ilo.egg-info/: PKG-INFO
base_folderv.0.0.49/libname/: alphabet.py  ilo.py
base_folderv.0.0.52/libname/: __init__.py  ilo.py
base_folderv.0.0.53/: setup.py
base_folderv.0.0.53/libname/: Labyrinth.py  ilo.py  potard_control.py  test.py
base_folderv.0.0.54/: README.md  pyproject.toml  setup.py
base_folderv.0.0.54/exemple/: Labyrinth.py  line_follower.py
base_folderv.0.0.54/libname/: Lib_test.ipynb  ilo.py  tester.py
base_folderv.0.0.54/libname/.env/: pyvenv.cfg
base_folderv0.0.18/: README.md  setup.py
base_folderv0.0.18/libname/: __init__.py  ilo.py
base_folderv0.0.19/: setup.py
base_folderv0.0.19/libname/: __init__.py  ilo.py
base_folderv0.0.21/: setup.py
base_folderv0.0.21/libname/: __init__.py  ilo.py
code_dev/plottica/: README.md  setup.py
code_dev/plottica/plottica/: plottica.py
examples/: Lib_test.ipynb
examples/dev_code/: NimBLE_python_side_method.py
ilo/: pyproject.toml
ilo/examples/: Labyrinth.py  Untitled.ipynb  alphabet.py
ilo/src/ilo/: ilo.py
nix/: ilo.nix  keyboard-crossplatform.nix
plottica/: pyproject.toml  setup.py
plottica/src/plottica/: __init__.py  plottica.py
src/ilo/: __init__.py  ble_lib.py  color_encoding.py  copy_to_clipboard.py  discovery.py  event_response.py  facade.py  help.py  ilo.py  net.py  protocol.py  updater.py  ws.py
src/ilo/robot/: __init__.py  diagnostic.py  legacy.py
src/ilo/transport/: ble.py  wifi.py
src/ilo/transports/: __init__.py  base.py  ble.py  dummy.py  serial.py  wifi.py
tests/: connexion.py  diagnostic.py  set_product_id.py  simple_trame_check.py  test_getters.py  test_getters_two_robots.py  test_imu.py  tof_lesson.py  trame_s_speed.py
