[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ilo"
version = "0.1.1"
description = "Control ilo robot using python!"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["python", "education", "robot", "ilo"]
authors = [{name = "intuition RT (SLB)", email = "contact@ilorobot.com"}]
maintainers = [{name = "intuition RT (SLB)", email = "contact@ilorobot.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Topic :: Education",
]
dependencies = [
  "pyserial>=3.4,<4.0",
  "psutil>=7.0.0",
  "websocket-client>=1.0.0,<1.9.0",
  "bleak>=1.1.1,<2.0.0",
  "prettytable>=3.17.0,<4.0.0",
  "keyboard-crossplatform==0.2.0",
  "requests>=2.25.0,<2.33.0",
  "keyboard>=0.13.4",
  # ^ https://github.com/boppreh/keyboard/blob/v0.13.5/keyboard/__init__.py#L82
  "packaging>=24.2",
  'numpy>=1.20.0,<2.0.0; python_version < "3.13"',
  'matplotlib>=3.3.0,<3.8.0; python_version < "3.13"',
  'numpy>=2.1; python_version >= "3.13"',
  'matplotlib>=3.10; python_version >= "3.13"',
  "pyperclip>=1.8.0,<2.0.0",
  "webcolors"
]

[project.urls]
Homepage = "https://ilorobot.com"
# Documentation = "https://ilorobot.com" TODO: setup sphinx
Repository = "https://github.com/intuition-rt/lib_python"
Issues = "https://github.com/intuition-rt/lib_python/issues"
Changelog = "https://github.com/intuition-rt/lib_python/blob/main/CHANGELOG.md"

[tool.hatch.build]
include = [
  "/src",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
]
exclude = [
  "/.direnv",
  "/.github",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ilo"]
