[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ilo"
version = "0.0.54"
description = "Control ilo robot using python command."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["python", "education", "robot", "ilo"]
authors = [
    {name = "intuition RT (SLB)", email = "contact@ilorobot.com"}
]
maintainers = [
    {name = "intuition RT (SLB)", email = "contact@ilorobot.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Topic :: Education",
]

dependencies = [
    "pyperclip",
    "pyserial",
    "websocket-client",
    "bleak==0.22.3",
    "prettytable",
    "keyboard_crossplatform",
    "requests",
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://ilorobot.com"
Documentation = "https://ilorobot.com"

[tool.setuptools]
py-modules = ["ilo"]

[tool.setuptools.package-dir]
"" = "libname"
